gcc/testsuite/gm2/pim/fail/tinyconst.mod
MODULE tinyconst ;
CONST
   Int = 16 ;
   Real = 1.0 + Int ;

END tinyconst.